Fixed spacing between paragraphs

--- a/css/small.css
+++ b/css/small.css
@@ -48,4 +48,10 @@ main {
     max-width: 800px;
     margin: 0 auto;
     padding: 3rem;
+    padding-top: 0;
+}
+
+h3 {
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
 }
